--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "better-sqlite3": "^12.2.0",
+    "clsx": "^2.1.1",
     "next": "15.5.0",
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
