--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
+    "build:webpack": "next build",
+    "analyze": "cross-env ANALYZE=true npm run build:webpack",
     "start": "next start",
     "lint": "eslint",
     "test:unit": "jest",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.5.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
@@ -36,7 +39,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "cypress": "^14.8.0",
+    "cross-env": "^10.0.0",
+    "cypress": "^14.5.4",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "jest": "^29.7.0",
