--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "npm run test:unit && npm run test:e2e"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.14.0",
     "better-sqlite3": "^12.2.0",
     "clsx": "^2.1.1",
@@ -24,7 +25,9 @@
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "zod": "^4.0.17",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
