--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.14.0",
+    "@types/react-window": "^1.8.8",
     "better-sqlite3": "^12.2.0",
     "clsx": "^2.1.1",
     "next": "15.5.0",
@@ -27,6 +28,8 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-virtualized-auto-sizer": "^1.0.26",
+    "react-window": "^1.8.11",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
   },
