--- a/package.json
+++ b/package.json
@@ -3,21 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "build:webpack": "next build",
     "analyze": "cross-env ANALYZE=true npm run build:webpack",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "next lint",
     "test:unit": "jest",
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
     "test:e2e": "cypress run",
     "test:e2e:open": "cypress open",
-    "test": "npm run test:unit && npm run test:e2e"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:seed-demo": "tsx scripts/database-setup.ts",
+    "db:setup-demo": "tsx scripts/database-setup.ts",
+    "db:init-demo": "tsx scripts/database-setup.ts",
+    "db:setup-all": "tsx scripts/database-setup.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.1",
+    "@mui/material": "^7.3.1",
     "@prisma/client": "^6.14.0",
     "@types/react-window": "^1.8.8",
     "better-sqlite3": "^12.2.0",
@@ -52,6 +67,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
+    "tsx": "^4.20.4",
     "typescript": "^5"
   }
 }
