chore: simplify project setup by implementing database seeding and setup scripts

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
+    "db:seed": "tsx scripts/database-seed.ts",
     "db:setup": "tsx scripts/database-setup.ts"
   },
   "dependencies": {
